Fixed mobile layout issues

--- a/styles.css
+++ b/styles.css
@@ -71,9 +71,9 @@ body {
   width: 100%;
   height: 100%;
   background: white;
-  -webkit-transition: all 500ms var(--base-timing-function);
-  -o-transition: all 500ms var(--base-timing-function);
-  transition: all 500ms var(--base-timing-function);
+  -webkit-transition: transform 500ms var(--base-timing-function);
+  -o-transition: transform 500ms var(--base-timing-function);
+  transition: transform 500ms var(--base-timing-function);
   z-index: -1;
 }
 .nav-link:hover {
@@ -162,7 +162,8 @@ body {
 #welcome-text:after {
   content: "";
   font-size: 0.5em;
-  -webkit-animation: anim_cycle_text 5s var(--base-timing-function) infinite both;
+  -webkit-animation: anim_cycle_text 5s var(--base-timing-function) infinite
+    both;
   animation: anim_cycle_text 5s var(--base-timing-function) infinite both;
   opacity: 0;
 }
@@ -1026,14 +1027,17 @@ body {
 
 /* Mobile UI */
 @media screen and (max-width: 850px) {
+  html {
+    width: 100%;
+  }
   #navbar {
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
+    -webkit-box-pack: space-around;
+    -ms-flex-pack: space-around;
+    justify-content: space-around;
+    width: 100%;
   }
   .nav-link {
     text-align: center;
-    width: 100%;
   }
   #welcome-section {
     -webkit-box-align: start;
@@ -1068,6 +1072,12 @@ body {
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
+  }
+  #projects-intro {
+    margin: 0px;
+  }
+  #project-tile-container {
+    width: 100%;
   }
   .contact-image,
   #codepen-asset,
